syntax = "proto3";
package grpc;

service Users {
    rpc GetUserByAuthToken (AuthInfo) returns (User);
    rpc GetUserByID (UserID) returns (User);
}

message UserID {
    int32 id = 1;
}

message AuthInfo {
    string token = 1;
}

message User {
    int32 id = 1;
    string username = 2;
    string email = 3;
}
